--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
   <head>
     <tittle>OSSHUB</tittle>
+	  <body style="background-color:#FF0000;"></body>
+	  
   </head>
   <body>
     <pre>
