--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <tittle>OSSHUB</tittle>
-	  <body style="background-color:#FF0000;"></body>
+	  <body style="background-color:black;"></body>
 	  
   </head>
   <body>
