--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
+   <head>
+      <meta charset="utf-8">
+	<title>OSSHUB</title>
+   </head>
   <head>
     <tittle>OSSHUB</tittle>
 	  <body style="background-color:black;"></body>
