--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 	<title>OSSHUB</title>
    </head>
   <head>
-    <tittle>OSSHUB</tittle>
 	  <body style="background-color:black;"></body>
-	  
+		<tittle> <OSSHUB> </tittle>  
   </head>
   <body>
 	  <font color="white">
