--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    </head>
   <head>
 	  <body style="background-color:black;"></body>
-		<tittle> <OSSHUB> </tittle>  
+		<tittle> - OSSHUB - </tittle>  
   </head>
   <body>
 	  <font color="white">
