--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 	<title>OSSHUB</title>
    </head>
   <head>
-	  <body style="background-color:black;"></body>
-		<tittle> - OSSHUB - </tittle>  
+     <body style="background-color:black;"></body>
+	<font color="white">
+	     <tittle> - OSSHUB - </tittle>
+        </font>  
   </head>
   <body>
 	  <font color="white">
