--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
         anonymous@localhost$>_  sudo su
         <font color="yellow">[sudo]</font> password for anonymous:
         anonymous@/Home/anonymous/OSSHUB/#>_  ls -la
-        <font color="white blue">hi.txt             passwd.txt             saludo.txt
-	</font>
+        <font color="#00ffec">hi.txt             passwd.txt             saludo.txt</font>
         /Home/anonymous/OSSHUB/#>_  cat saludo.txt
       
       
