--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         ---------------------
         *   Welcome Hacker  *
         ---------------------
-        * <A HREF="https://isrvb.github.io/">HOME</A> | <>Lekeleaks</A>  *
+        * <A HREF="https://isrvb.github.io/">HOME</A> | <A HREF="https://isrvb.github.io/lekeleaks/">Lekeleaks</A>  *
 	---------------------
         
         <font color="#FF0000">anonymous@localhost$>_</font>  sudo su
